--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.nanohttpd:nanohttpd-webserver:2.1.1'
+    compile 'com.google.android.gms:play-services-cast-framework:10.0.1'
 }
